# pg_gem

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pg_gem.control  pg_gembed.control
pg_gem_core/: Cargo.toml  build.rs
pg_gem_core/proto/: tei.proto
pg_gem_core/src/: fastembed.rs  lib.rs  remote.rs
pg_gem_core/src/embedders/: fastembed.rs  grpc.rs  mod.rs  remote.rs
server/: README.md  embedding_api_grpc.py  tei_pb2.py  tei_pb2_grpc.py
server/proto/: tei.proto
sql/: pg_gem--0.1.0.sql  pg_gembed--0.1.0.sql
src/: bgworker.c  embedding_worker.c  embedding_worker.h  pg_gem.c  pg_gem.h  pg_gembed.c  pg_gembed.h
