[package]
name = "pg_gem_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.100"
fastembed = { git = "https://github.com/JoelDiaz222/fastembed-rs" }
prost = "0.14.1"
tonic = "0.14.2"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"

[profile.release]
debug = 0
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "symbols"
panic = "unwind"
